# poseidon-rs

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: test.yml
c-bind-tests/: README.md  go.mod  starkware_sw2.go  starkware_sw2_test.go
core/: Cargo.toml
core/src/: fields.rs  lib.rs  parameters.rs  permutation.rs  poseidon.rs
core/src/fields/: arithmetic.rs  prime.rs
core/src/parameters/: starkware.rs
core/src/parameters/mina/: vesta.rs
core/src/parameters/starkware/: sw2.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
ensure-no-std/: Cargo.toml  README.md  readme.md
ensure-no-std/src/: main.rs
include/: poseidon.h
src/: convert.rs  fields.rs  lib.rs  parameters.rs  permutation.rs  poseidon.rs  sponge.rs  variants.rs  with_alloc.rs  with_std.rs  without_std.rs
src/fields/: arithmetic.rs  prime.rs
src/parameters/: core.rs  fields.rs  mina.rs  s128b.rs  starkware.rs
src/parameters/mina/: pallas.rs  vesta.rs
src/parameters/starkware/: sw2.rs  sw3.rs  sw4.rs  sw8.rs
src/variants/: starkware.rs
src/variants/starkware/: sw2.rs
src/variants/starkware/sw2/: hash.rs  parameters.rs  tests.rs
starkware/: Cargo.toml
starkware/src/: lib.rs
tests/: pallas.rs  s128b.rs  sw2.rs  sw3.rs  sw4.rs  sw8.rs  vesta.rs
tests/common/: mod.rs
tests/go_tests/: s128b.go  s128b_test.go
