[package]
name = "poseidon"
version = "0.0.1"
authors = ["thomas-quadratic <thomas.zamojski@quadratic-labs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/keep-starknet-strange/poseidon-rs"
readme = "README.md"

[dependencies]
ff = {version="0.13.0", features=["derive"]}
libc = "0.2.139"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[lib]
crate-type = ["staticlib", "lib"]
